test/libyul/yulSyntaxTests/vardecl_name_clashes.yul
{
	let x := 1
	let x := 2
}
// ----
// DeclarationError 1395: (15-25): Variable name x already taken in this scope.
